--- a/css/styles.css
+++ b/css/styles.css
@@ -5,3 +5,14 @@
 .main-nav li {
   margin: 10px;
 }
+#validation-input {
+  border: 3px solid #bdbdbd;
+}
+
+#validation-input.valid {
+  border-color: #4caf50;
+}
+
+#validation-input.invalid {
+  border-color: #f44336;
+}
